y.output

state 0
	$accept: .statement $end 

	SELECT  shift 8
	INSERT  shift 9
	UPDATE  shift 10
	DELETE  shift 11
	CREATE  shift 12
	DROP  shift 13
	.  error

	statement  goto 1
	select_stmt  goto 2
	insert_stmt  goto 3
	update_stmt  goto 4
	delete_stmt  goto 5
	create_table_stmt  goto 6
	drop_table_stmt  goto 7

state 1
	$accept:  statement.$end 

	$end  accept
	.  error


state 2
	statement:  select_stmt.    (1)

	.  reduce 1 (src line 117)


state 3
	statement:  insert_stmt.    (2)

	.  reduce 2 (src line 119)


state 4
	statement:  update_stmt.    (3)

	.  reduce 3 (src line 120)


state 5
	statement:  delete_stmt.    (4)

	.  reduce 4 (src line 121)


state 6
	statement:  create_table_stmt.    (5)

	.  reduce 5 (src line 122)


state 7
	statement:  drop_table_stmt.    (6)

	.  reduce 6 (src line 123)


state 8
	select_stmt:  SELECT.distinct_clause select_list from_clause where_clause group_by_clause having_clause order_by_clause limit_clause offset_clause 
	distinct_clause: .    (8)

	DISTINCT  shift 15
	ALL  shift 16
	.  reduce 8 (src line 151)

	distinct_clause  goto 14

state 9
	insert_stmt:  INSERT.INTO identifier LPAREN column_list RPAREN VALUES LPAREN expression_list RPAREN 
	insert_stmt:  INSERT.INTO identifier VALUES LPAREN expression_list RPAREN 
	insert_stmt:  INSERT.INTO identifier select_stmt 

	INTO  shift 17
	.  error


state 10
	update_stmt:  UPDATE.identifier SET assignment_list where_clause 

	IDENT  shift 19
	.  error

	identifier  goto 18

state 11
	delete_stmt:  DELETE.FROM identifier where_clause 

	FROM  shift 20
	.  error


state 12
	create_table_stmt:  CREATE.TABLE identifier LPAREN column_def_list RPAREN 
	create_table_stmt:  CREATE.TABLE IF NOT EXISTS identifier LPAREN column_def_list RPAREN 

	TABLE  shift 21
	.  error


state 13
	drop_table_stmt:  DROP.TABLE identifier 
	drop_table_stmt:  DROP.TABLE IF EXISTS identifier 

	TABLE  shift 22
	.  error


state 14
	select_stmt:  SELECT distinct_clause.select_list from_clause where_clause group_by_clause having_clause order_by_clause limit_clause offset_clause 

	IDENT  shift 19
	STRING  shift 49
	INT  shift 47
	FLOAT  shift 48
	PLUS  shift 46
	MINUS  shift 45
	NOT  shift 44
	LPAREN  shift 34
	LBRACKET  shift 35
	NULL  shift 43
	TRUE  shift 50
	FALSE  shift 51
	COUNT  shift 38
	CASE  shift 31
	.  error

	select_list  goto 23
	select_item  goto 24
	expression  goto 25
	primary_expr  goto 26
	binary_expr  goto 27
	unary_expr  goto 28
	function_call  goto 29
	subquery  goto 30
	literal_expr  goto 32
	column_ref  goto 33
	unary_operator  goto 36
	identifier  goto 37
	string_literal  goto 41
	integer_literal  goto 39
	float_literal  goto 40
	boolean_literal  goto 42

state 15
	distinct_clause:  DISTINCT.    (9)

	.  reduce 9 (src line 153)


state 16
	distinct_clause:  ALL.    (10)

	.  reduce 10 (src line 154)


state 17
	insert_stmt:  INSERT INTO.identifier LPAREN column_list RPAREN VALUES LPAREN expression_list RPAREN 
	insert_stmt:  INSERT INTO.identifier VALUES LPAREN expression_list RPAREN 
	insert_stmt:  INSERT INTO.identifier select_stmt 

	IDENT  shift 19
	.  error

	identifier  goto 52

state 18
	update_stmt:  UPDATE identifier.SET assignment_list where_clause 

	SET  shift 53
	.  error


state 19
	identifier:  IDENT.    (149)

	.  reduce 149 (src line 574)


state 20
	delete_stmt:  DELETE FROM.identifier where_clause 

	IDENT  shift 19
	.  error

	identifier  goto 54

state 21
	create_table_stmt:  CREATE TABLE.identifier LPAREN column_def_list RPAREN 
	create_table_stmt:  CREATE TABLE.IF NOT EXISTS identifier LPAREN column_def_list RPAREN 

	IDENT  shift 19
	IF  shift 56
	.  error

	identifier  goto 55

state 22
	drop_table_stmt:  DROP TABLE.identifier 
	drop_table_stmt:  DROP TABLE.IF EXISTS identifier 

	IDENT  shift 19
	IF  shift 58
	.  error

	identifier  goto 57

state 23
	select_stmt:  SELECT distinct_clause select_list.from_clause where_clause group_by_clause having_clause order_by_clause limit_clause offset_clause 
	select_list:  select_list.COMMA select_item 
	from_clause: .    (16)

	COMMA  shift 60
	FROM  shift 61
	.  reduce 16 (src line 168)

	from_clause  goto 59

state 24
	select_list:  select_item.    (11)

	.  reduce 11 (src line 157)


state 25
	select_item:  expression.    (13)
	select_item:  expression.AS identifier 
	select_item:  expression.identifier 
	binary_expr:  expression.binary_operator expression 

	IDENT  shift 19
	EQ  shift 79
	NEQ  shift 80
	LT  shift 81
	LE  shift 82
	GT  shift 83
	GE  shift 84
	PLUS  shift 73
	MINUS  shift 74
	MULTIPLY  shift 75
	DIVIDE  shift 76
	MODULO  shift 77
	POWER  shift 78
	AND  shift 85
	OR  shift 86
	CONCAT  shift 68
	LIKE  shift 69
	ILIKE  shift 70
	IN  shift 71
	IS  shift 72
	AS  shift 62
	.  reduce 13 (src line 162)

	binary_operator  goto 64
	comparison_operator  goto 66
	arithmetic_operator  goto 65
	logical_operator  goto 67
	identifier  goto 63

state 26
	expression:  primary_expr.    (58)

	.  reduce 58 (src line 270)


state 27
	expression:  binary_expr.    (59)

	.  reduce 59 (src line 272)


state 28
	expression:  unary_expr.    (60)

	.  reduce 60 (src line 273)


state 29
	expression:  function_call.    (61)

	.  reduce 61 (src line 274)


state 30
	expression:  subquery.    (62)

	.  reduce 62 (src line 275)


state 31
	expression:  CASE.expression WHEN expression THEN expression ELSE expression END 
	expression:  CASE.WHEN expression THEN expression ELSE expression END 

	IDENT  shift 19
	STRING  shift 49
	INT  shift 47
	FLOAT  shift 48
	PLUS  shift 46
	MINUS  shift 45
	NOT  shift 44
	LPAREN  shift 34
	LBRACKET  shift 35
	NULL  shift 43
	TRUE  shift 50
	FALSE  shift 51
	COUNT  shift 38
	CASE  shift 31
	WHEN  shift 88
	.  error

	expression  goto 87
	primary_expr  goto 26
	binary_expr  goto 27
	unary_expr  goto 28
	function_call  goto 29
	subquery  goto 30
	literal_expr  goto 32
	column_ref  goto 33
	unary_operator  goto 36
	identifier  goto 37
	string_literal  goto 41
	integer_literal  goto 39
	float_literal  goto 40
	boolean_literal  goto 42

state 32
	primary_expr:  literal_expr.    (65)

	.  reduce 65 (src line 297)


state 33
	primary_expr:  column_ref.    (66)

	.  reduce 66 (src line 299)


state 34
	primary_expr:  LPAREN.expression RPAREN 
	subquery:  LPAREN.select_stmt RPAREN 

	IDENT  shift 19
	STRING  shift 49
	INT  shift 47
	FLOAT  shift 48
	PLUS  shift 46
	MINUS  shift 45
	NOT  shift 44
	LPAREN  shift 34
	LBRACKET  shift 35
	SELECT  shift 8
	NULL  shift 43
	TRUE  shift 50
	FALSE  shift 51
	COUNT  shift 38
	CASE  shift 31
	.  error

	select_stmt  goto 90
	expression  goto 89
	primary_expr  goto 26
	binary_expr  goto 27
	unary_expr  goto 28
	function_call  goto 29
	subquery  goto 30
	literal_expr  goto 32
	column_ref  goto 33
	unary_operator  goto 36
	identifier  goto 37
	string_literal  goto 41
	integer_literal  goto 39
	float_literal  goto 40
	boolean_literal  goto 42

state 35
	primary_expr:  LBRACKET.expression_list RBRACKET 

	IDENT  shift 19
	STRING  shift 49
	INT  shift 47
	FLOAT  shift 48
	PLUS  shift 46
	MINUS  shift 45
	NOT  shift 44
	LPAREN  shift 34
	LBRACKET  shift 35
	NULL  shift 43
	TRUE  shift 50
	FALSE  shift 51
	COUNT  shift 38
	CASE  shift 31
	.  error

	expression  goto 92
	primary_expr  goto 26
	binary_expr  goto 27
	unary_expr  goto 28
	function_call  goto 29
	subquery  goto 30
	literal_expr  goto 32
	column_ref  goto 33
	expression_list  goto 91
	unary_operator  goto 36
	identifier  goto 37
	string_literal  goto 41
	integer_literal  goto 39
	float_literal  goto 40
	boolean_literal  goto 42

state 36
	unary_expr:  unary_operator.expression 

	IDENT  shift 19
	STRING  shift 49
	INT  shift 47
	FLOAT  shift 48
	PLUS  shift 46
	MINUS  shift 45
	NOT  shift 44
	LPAREN  shift 34
	LBRACKET  shift 35
	NULL  shift 43
	TRUE  shift 50
	FALSE  shift 51
	COUNT  shift 38
	CASE  shift 31
	.  error

	expression  goto 93
	primary_expr  goto 26
	binary_expr  goto 27
	unary_expr  goto 28
	function_call  goto 29
	subquery  goto 30
	literal_expr  goto 32
	column_ref  goto 33
	unary_operator  goto 36
	identifier  goto 37
	string_literal  goto 41
	integer_literal  goto 39
	float_literal  goto 40
	boolean_literal  goto 42

state 37
	column_ref:  identifier.    (101)
	column_ref:  identifier.DOT identifier 
	function_call:  identifier.LPAREN argument_list RPAREN 
	function_call:  identifier.LPAREN RPAREN 

	LPAREN  shift 95
	DOT  shift 94
	.  reduce 101 (src line 364)


state 38
	function_call:  COUNT.LPAREN MULTIPLY RPAREN 
	function_call:  COUNT.LPAREN DISTINCT expression RPAREN 

	LPAREN  shift 96
	.  error


state 39
	literal_expr:  integer_literal.    (96)

	.  reduce 96 (src line 356)


state 40
	literal_expr:  float_literal.    (97)

	.  reduce 97 (src line 358)


state 41
	literal_expr:  string_literal.    (98)

	.  reduce 98 (src line 359)


state 42
	literal_expr:  boolean_literal.    (99)

	.  reduce 99 (src line 360)


state 43
	literal_expr:  NULL.    (100)

	.  reduce 100 (src line 361)


state 44
	unary_operator:  NOT.    (93)

	.  reduce 93 (src line 350)


state 45
	unary_operator:  MINUS.    (94)

	.  reduce 94 (src line 352)


state 46
	unary_operator:  PLUS.    (95)

	.  reduce 95 (src line 353)


state 47
	integer_literal:  INT.    (151)

	.  reduce 151 (src line 582)


state 48
	float_literal:  FLOAT.    (152)

	.  reduce 152 (src line 586)


state 49
	string_literal:  STRING.    (150)

	.  reduce 150 (src line 578)


state 50
	boolean_literal:  TRUE.    (153)

	.  reduce 153 (src line 590)


state 51
	boolean_literal:  FALSE.    (154)

	.  reduce 154 (src line 592)


state 52
	insert_stmt:  INSERT INTO identifier.LPAREN column_list RPAREN VALUES LPAREN expression_list RPAREN 
	insert_stmt:  INSERT INTO identifier.VALUES LPAREN expression_list RPAREN 
	insert_stmt:  INSERT INTO identifier.select_stmt 

	LPAREN  shift 97
	SELECT  shift 8
	VALUES  shift 98
	.  error

	select_stmt  goto 99

state 53
	update_stmt:  UPDATE identifier SET.assignment_list where_clause 

	IDENT  shift 19
	.  error

	assignment_list  goto 100
	identifier  goto 101

state 54
	delete_stmt:  DELETE FROM identifier.where_clause 
	where_clause: .    (39)

	WHERE  shift 103
	.  reduce 39 (src line 223)

	where_clause  goto 102

state 55
	create_table_stmt:  CREATE TABLE identifier.LPAREN column_def_list RPAREN 

	LPAREN  shift 104
	.  error


state 56
	create_table_stmt:  CREATE TABLE IF.NOT EXISTS identifier LPAREN column_def_list RPAREN 

	NOT  shift 105
	.  error


state 57
	drop_table_stmt:  DROP TABLE identifier.    (147)

	.  reduce 147 (src line 562)


state 58
	drop_table_stmt:  DROP TABLE IF.EXISTS identifier 

	EXISTS  shift 106
	.  error


state 59
	select_stmt:  SELECT distinct_clause select_list from_clause.where_clause group_by_clause having_clause order_by_clause limit_clause offset_clause 
	where_clause: .    (39)

	WHERE  shift 103
	.  reduce 39 (src line 223)

	where_clause  goto 107

state 60
	select_list:  select_list COMMA.select_item 

	IDENT  shift 19
	STRING  shift 49
	INT  shift 47
	FLOAT  shift 48
	PLUS  shift 46
	MINUS  shift 45
	NOT  shift 44
	LPAREN  shift 34
	LBRACKET  shift 35
	NULL  shift 43
	TRUE  shift 50
	FALSE  shift 51
	COUNT  shift 38
	CASE  shift 31
	.  error

	select_item  goto 108
	expression  goto 25
	primary_expr  goto 26
	binary_expr  goto 27
	unary_expr  goto 28
	function_call  goto 29
	subquery  goto 30
	literal_expr  goto 32
	column_ref  goto 33
	unary_operator  goto 36
	identifier  goto 37
	string_literal  goto 41
	integer_literal  goto 39
	float_literal  goto 40
	boolean_literal  goto 42

state 61
	from_clause:  FROM.table_list 

	IDENT  shift 19
	LPAREN  shift 113
	.  error

	table_list  goto 109
	table_ref  goto 110
	join_expr  goto 112
	identifier  goto 111

state 62
	select_item:  expression AS.identifier 

	IDENT  shift 19
	.  error

	identifier  goto 114

state 63
	select_item:  expression identifier.    (15)

	.  reduce 15 (src line 165)


state 64
	binary_expr:  expression binary_operator.expression 

	IDENT  shift 19
	STRING  shift 49
	INT  shift 47
	FLOAT  shift 48
	PLUS  shift 46
	MINUS  shift 45
	NOT  shift 44
	LPAREN  shift 34
	LBRACKET  shift 35
	NULL  shift 43
	TRUE  shift 50
	FALSE  shift 51
	COUNT  shift 38
	CASE  shift 31
	.  error

	expression  goto 115
	primary_expr  goto 26
	binary_expr  goto 27
	unary_expr  goto 28
	function_call  goto 29
	subquery  goto 30
	literal_expr  goto 32
	column_ref  goto 33
	unary_operator  goto 36
	identifier  goto 37
	string_literal  goto 41
	integer_literal  goto 39
	float_literal  goto 40
	boolean_literal  goto 42

state 65
	binary_operator:  arithmetic_operator.    (70)

	.  reduce 70 (src line 312)


state 66
	binary_operator:  comparison_operator.    (71)

	.  reduce 71 (src line 314)


state 67
	binary_operator:  logical_operator.    (72)

	.  reduce 72 (src line 315)


state 68
	binary_operator:  CONCAT.    (73)

	.  reduce 73 (src line 316)


state 69
	binary_operator:  LIKE.    (74)

	.  reduce 74 (src line 317)


state 70
	binary_operator:  ILIKE.    (75)

	.  reduce 75 (src line 318)


state 71
	binary_operator:  IN.    (76)

	.  reduce 76 (src line 319)


state 72
	binary_operator:  IS.    (77)

	.  reduce 77 (src line 320)


state 73
	arithmetic_operator:  PLUS.    (78)

	.  reduce 78 (src line 323)


state 74
	arithmetic_operator:  MINUS.    (79)

	.  reduce 79 (src line 325)


state 75
	arithmetic_operator:  MULTIPLY.    (80)

	.  reduce 80 (src line 326)


state 76
	arithmetic_operator:  DIVIDE.    (81)

	.  reduce 81 (src line 327)


state 77
	arithmetic_operator:  MODULO.    (82)

	.  reduce 82 (src line 328)


state 78
	arithmetic_operator:  POWER.    (83)
